[gd_scene load_steps=8 format=3 uid="uid://bv5oedrpa0a8b"]

[ext_resource type="Shader" uid="uid://dx3oq007iqwlk" path="res://scenes/building_mode/building_site/b_site_shader.gdshader" id="1_f5ylt"]
[ext_resource type="Script" uid="uid://dbje7fnvypl64" path="res://scenes/building_mode/building_site/building_site.gd" id="1_mi8hl"]
[ext_resource type="PackedScene" uid="uid://cie4u20dkgucc" path="res://scenes/hud/splash_texts/press_key/press_e_to.tscn" id="3_8kapk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f5ylt"]
render_priority = 0
shader = ExtResource("1_f5ylt")
shader_parameter/stripe_color = Vector4(0.5, 0.8, 1, 0.7)
shader_parameter/bg_alpha = 0.2
shader_parameter/speed = 1.0
shader_parameter/frequency = 5.0
shader_parameter/sharpness = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_mi8hl"]
lightmap_size_hint = Vector2i(124, 63)
material = SubResource("ShaderMaterial_f5ylt")
radius = 4.0
height = 8.0

[sub_resource type="SphereMesh" id="SphereMesh_f5ylt"]
lightmap_size_hint = Vector2i(124, 63)
material = SubResource("ShaderMaterial_f5ylt")
flip_faces = true
radius = 4.0
height = 8.0

[sub_resource type="SphereShape3D" id="SphereShape3D_f5ylt"]
radius = 4.0

[node name="BuildingSite" type="Area3D"]
collision_layer = 8
script = ExtResource("1_mi8hl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("SphereMesh_mi8hl")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("SphereMesh_f5ylt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_f5ylt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PressETo" parent="CanvasLayer" instance=ExtResource("3_8kapk")]
visible = false
text = "Elegir que construir"

[node name="Items" type="Node3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 0, 2, 0)

[node name="Rotator" type="Node3D" parent="Items"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)

[node name="ItemsDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemsDetector"]
shape = SubResource("SphereShape3D_f5ylt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="asked_for_action" from="CanvasLayer/PressETo" to="." method="_on_press_e_to_asked_for_action"]
[connection signal="body_entered" from="ItemsDetector" to="." method="_on_items_detector_body_entered"]
